added +s in h1 tag

--- a/house.html
+++ b/house.html
@@ -1,5 +1,5 @@
 <html>
 <title>this is my house</title>
-<h1>furniture,bedroom</h1>
+<h1>+furniture,bedroom+</h1>
 <p>its spacious and lovely</p>
 </html>
